--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
 </head>
 <body>
-    <div class="login-root">
+    <div class="main-root">
     <div class="box-root flex-flex flex-direction--column" style="min-height: 100vh;flex-grow: 1;">
-      <div class="loginbackground box-background--white padding-top--64">
-        <div class="loginbackground-gridContainer">
+      <div class="mainbackground box-background--white padding-top--64">
+        <div class="mainbackground-gridContainer">
           <div class="box-root flex-flex" style="grid-area: top / start / 8 / end;">
             <div class="box-root" style="background-image: linear-gradient(white 0%, rgb(247, 250, 252) 33%); flex-grow: 1;">
             </div>
