--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,9 @@
                 <div class="field padding-bottom--24">
                   <input type="submit" name="submit" value="Continue">
                 </div>
+                {% if prediction is defined %}
                 Hi {{ user_name }}, You sound {{ prediction }}
+                {% endif %}
               </form>
             </div>
           </div>
